WildcardX: Fix for a bug with #bot botgroup add.
WildcardX: Fix for a bug with bot group leader's record in group_id table not removing any older records.
WildcardX: Fix for a bug  that caused a bot group leader to say it is following itself.
KLS: Added #globalview
KLS: QGlobals will update instantly for the zone they're in.

==10/19/2009==
WildcardX: Fixed a number of bugs with support bots zoning. Refactored the code and eliminated the botactives table.

<SQL Required for BOTS> 1030_botzoningsupport.sql

==10/18/2009==
WildcardX: Bots can now zone with their bot owners as long as they are in a group. Bots not in a group will camp instead of zone.

<SQL Required For BOTS> 1027_botactives.sql

==10/17/2009==
WildcardX: A character and a bot can now recieve an ldon adventure.

<Required SQL> 1022_botadventuring.sql

==10/15/2009==
AndMetal: Added rule Combat:ProcTargetOnly(true). Allows the change from Rev 606 that limits procs to only the target to be removed. Note: AE procs can still cause stability issues if it is set to false.
AndMetal: Fixed some "no newline at end of file" warnings.
AndMetal: Corrected formatting/typo for some # commands.
AndMetal: Fixed a memory leak in Client::ZonePC().
KLS: Changed how QGlobals are tracked on the server to reduce the amount of times we query the database.  I've tested it quite a bit but if you find anything wrong with the new implementation: report it.

==10/07/2009==
Rogean: #motd now updates clients instantly serverwide.

==09/30/2009==
Rogean: Fixed possible crash in Mob::CheckWillAggro();
Rogean: Temporarily Disabled Fear MaxLevel Check causing a crash.
Trevius: Added Quest Commands quest::playerfeature(feature, setting) and quest::npcfeature(feature, setting) - See Wiki for details on usage.
Trevius: Added Quest Objects GetHairColor(), GetBeardColor(), GetEyeColor1(), GetEyeColor2(), GetHairStyle(), GetLuclinFace(), GetBeard(), GetDrakkinHeritage(), GetDrakkinTattoo(), and GetDrakkinDetails().

==09/29/2009==